[package]
name = "oca-repository"
version = "2.0.0-rc.1"
edition = "2021"
license = "EUPL-1.2"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [features]
# data_entries_xls = ["oca-parser-xls"]

[[bin]]
path = "src/main.rs"
name = "oca-repository"

[dependencies]
actix-files = "0.6.9"
actix-web = "4.12.1"
actix-web-httpauth = "0.8.2"
time = "0.3.44"
config = "0.15.19"
dyn-clonable = "0.9.2"
indexmap = { version = "2.12.1", features = ["serde"] }
isolang = "2.4.0"
# oca-parser-xls = { version = "3.0.0-rc.9", optional = true }
oca-sdk-rs = { version = "2.0.0-rc.2" }
oca-store = { version = "2.0.0-rc.4" }
rusqlite = "0.37.0"
serde = { version = "1.0", features = ["derive"] }
serde-value = "0.7.0"
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
said = { version = "0.5.2", features = ["macros"] }
sha2 = "0.10.9"
base64 = "0.22.1"
kv = { version = "0.24.0", features = ["json-value"]}
tracing = { version = "0.1", features = ["log"] }        # tracing macros + log compat types
tracing-log = "0.2"                                      # forwards log -> tracing
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
